Fixes issue where open modal is shifting body content to the left

--- a/less/framework/modals.less
+++ b/less/framework/modals.less
@@ -118,6 +118,16 @@
   }
 }
 
+
+// Measure scrollbar width for padding body during modal show/hide
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+
 // Scale up the modal
 @media (min-width: @breakpoint-md) {
   // Automatically set modal's width for larger viewports
